#79: refactor into DTO
